Fix issue with overflowing text on homepage when viewed on a small device

--- a/themes/blank/static/css/style.css
+++ b/themes/blank/static/css/style.css
@@ -137,6 +137,7 @@ main article div.separator {
     margin: 0;
     padding: 0;
     line-height: 1.4em;
+    overflow: hidden;
 }
 .console .prompt {
     font-weight: bold;
